*Added padding-top to MainSection component *Added alt attribiute to CompanyLogo img

--- a/src/components/MainSection/MainSection.module.scss
+++ b/src/components/MainSection/MainSection.module.scss
@@ -2,7 +2,7 @@
 
 .section {
   background-color: $color-background;
-  //   height: 500px;
   min-height: calc(100vh - 330px);
   width: 100%;
+  padding-top: 100px;
 }
