--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .footer {
-  height: 200px;
+  height: 100px;
   width: 100%;
   background-color: $color-blue-secondary;
   display: flex;
@@ -14,13 +14,21 @@
     color: $color-white;
     width: 100%;
     text-align: center;
+    margin: 0 auto 0;
+    font-size: 1.5rem;
   }
 
   &_nav {
     &_github {
       width: 35px;
       height: 35px;
-      margin-rigth: 10px;
+      margin-right: 10px;
+      margin-top: 10px;
+    }
+
+    &_linkedin {
+      width: 35px;
+      height: 35px;
     }
   }
 }
