--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,26 @@ body {
   font-weight: 400;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: $color-grey;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-blue-secondary;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $color-orange-primary;
+}
+
 ///////////////////////////////
 /*
 body {
