--- a/src/components/CardContent/CardContent.module.scss
+++ b/src/components/CardContent/CardContent.module.scss
@@ -94,8 +94,7 @@ li {
 
 .carousel {
   position: relative;
-  // padding-top: 75%;
-  // filter: drop-shadow(0 0 10px #0003);
+
   perspective: 100px;
   height: 530px;
 
@@ -176,72 +175,46 @@ li {
 .carousel__navigation {
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: 30px;
   left: 0;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.carousel__navigation__list,
-.carousel__navigation__item {
-  display: inline-block;
+.carousel__navigation__list {
+  display: flex;
+  width: 90px;
+  justify-content: space-between;
 }
 
-.carousel__navigation__button {
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: #333;
-  background-clip: content-box;
-  border: 0.25rem solid transparent;
-  border-radius: 50%;
-  font-size: 0;
-  transition: transform 0.1s;
+.carousel__navigation_circle {
+  width: 20px;
 }
 
-.carousel::before,
-.carousel::after,
 .carousel__prev,
 .carousel__next {
   position: absolute;
-  top: 0;
-  margin-top: 37.5%;
-  width: 4rem;
-  height: 4rem;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  font-size: 0;
-  outline: 0;
+  top: 265px;
 }
 
-.carousel::before,
+.carousel__prevBtn {
+  position: absolute;
+  left: 40px;
+  width: 40px;
+  height: 40px;
+}
+
+.carousel__nextBtn {
+  position: absolute;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+}
+
 .carousel__prev {
   left: -1rem;
 }
 
-.carousel::after,
 .carousel__next {
   right: -1rem;
-}
-
-.carousel::before,
-.carousel::after {
-  content: '';
-  z-index: 1;
-  background-color: #333;
-  background-size: 1.5rem 1.5rem;
-  background-repeat: no-repeat;
-  background-position: center center;
-  color: #fff;
-  font-size: 2.5rem;
-  line-height: 4rem;
-  text-align: center;
-  pointer-events: none;
-}
-
-.carousel::before {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-}
-
-.carousel::after {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
 }
