--- a/src/components/SecondSlide/SecondSlide.module.scss
+++ b/src/components/SecondSlide/SecondSlide.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 50px;
+  justify-content: center;
 
   &_form {
     width: 400px;
@@ -37,13 +37,3 @@
     }
   }
 }
-
-// &_input {
-//     width: 400px;
-//     height: 50px;
-//     border: 1px solid $color-blue-secondary;
-//   }
-
-//   ::placeholder {
-//     padding-left: 5px;
-//   }
