--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -11,7 +11,7 @@
   align-items: center;
 
   & p {
-    color: $color-white;
+    color: $color-grey;
     width: 100%;
     text-align: center;
     margin: 0 auto 0;
