* Input fields styles chanes * Submit btn styles chanegs

--- a/src/components/SecondSlide/SecondSlide.module.scss
+++ b/src/components/SecondSlide/SecondSlide.module.scss
@@ -23,17 +23,15 @@
       margin: 8px 0;
       display: inline-block;
       border: 1px solid $color-blue-secondary;
-    }
 
-    :focus {
-      outline: none;
-    }
+      &:focus {
+        outline: none;
+      }
 
-    :focus-within {
-      box-shadow: inset 0px 0px 0px 1px $color-blue-secondary,
-        0 0.7rem 3rem rgb(82 82 82 / 8%);
-      // -webkit-transform: translateY(-2px);
-      // transform: translateY(-2px);
+      &:focus-within {
+        box-shadow: inset 0px 0px 0px 1px $color-blue-secondary,
+          0 0.7rem 3rem rgb(82 82 82 / 8%);
+      }
     }
   }
 }
