--- a/src/components/ThirdSlide/ThirdSlide.module.scss
+++ b/src/components/ThirdSlide/ThirdSlide.module.scss
@@ -23,18 +23,16 @@
       margin: 8px 0;
       display: inline-block;
       border: 1px solid $color-blue-secondary;
+
+      &:focus {
+        outline: none;
+      }
+
+      &:focus-within {
+        box-shadow: inset 0px 0px 0px 1px $color-blue-secondary,
+          0 0.7rem 3rem rgb(82 82 82 / 8%);
+      }
     }
-
-    // :focus {
-    //   outline: none;
-    // }
-
-    // :focus-within {
-    //   border-width: 2px;
-    //   box-shadow: 0 0.7rem 3rem rgb(82 82 82 / 8%);
-    //   -webkit-transform: translateY(-2px);
-    //   transform: translateY(-2px);
-    // }
 
     &_container {
       display: flex;
@@ -59,9 +57,9 @@
       font-size: 2.2rem;
       cursor: pointer;
 
-      :hover {
-        //   transform: scale(1.02);
-        box-shadow: inset 0px 0px 0px 2px $color-blue-secondary;
+      &:hover {
+        transform: scale(1.01);
+        // box-shadow: inset 0px 0px 0px 2px $color-blue-secondary;
       }
     }
   }
