--- a/src/components/SecondSlide/SecondSlide.module.scss
+++ b/src/components/SecondSlide/SecondSlide.module.scss
@@ -11,7 +11,8 @@
 
   &_form {
     width: 400px;
-    margin-bottom: 50px;
+    min-height: 128px;
+    margin-bottom: 25px;
 
     label {
       font-size: 2rem;
