* Disabling forward arrow btn conditionally * Moved errors states to context

--- a/src/components/SecondSlide/SecondSlide.module.scss
+++ b/src/components/SecondSlide/SecondSlide.module.scss
@@ -12,7 +12,8 @@
   &_form {
     width: 400px;
     min-height: 128px;
-    margin-bottom: 25px;
+    margin-top: 12.5px;
+    margin-bottom: 12.5px;
 
     label {
       font-size: 2rem;
