--- a/src/components/ThirdSlide/ThirdSlide.module.scss
+++ b/src/components/ThirdSlide/ThirdSlide.module.scss
@@ -13,11 +13,15 @@
     width: 400px;
     margin-bottom: 50px;
 
+    &_container1 {
+      min-height: 104px;
+    }
+
     label {
       font-size: 2rem;
     }
 
-    input {
+    &_input {
       width: 100%;
       padding: 12px 20px;
       margin: 8px 0;
@@ -34,19 +38,46 @@
       }
     }
 
-    &_container {
+    &_invalidInput {
+      border: 1px solid $color-orange-secondary;
+
+      &:focus {
+        outline: none;
+      }
+
+      &:focus-within {
+        box-shadow: inset 0px 0px 0px 1px $color-orange-secondary,
+          0 0.7rem 3rem rgb(82 82 82 / 8%);
+      }
+    }
+
+    &_error {
+      color: $color-orange-secondary;
+      font-size: 1.5rem;
+    }
+
+    &_container2 {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       width: 100%;
       align-items: flex-start;
       margin: 50px 0px 50px;
+      min-height: 47px;
 
       input {
+        margin-top: 8px;
         width: 13px;
       }
 
       label {
         margin-left: 10px;
+      }
+
+      p {
+        width: 100%;
+        color: $color-orange-secondary;
+        font-size: 1.5rem;
       }
     }
 
@@ -55,11 +86,23 @@
       border: none;
       color: $color-white;
       font-size: 2.2rem;
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
       cursor: pointer;
 
       &:hover {
         transform: scale(1.01);
         // box-shadow: inset 0px 0px 0px 2px $color-blue-secondary;
+      }
+
+      &_disabled {
+        opacity: 0.3;
+
+        &:hover {
+          transform: none;
+          cursor: default;
+        }
       }
     }
   }
