* Implemented fetching data from github API * Built the FourthSlide component

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,3 +10,9 @@ $color-white: #ffffff;
 $color-grey: #e0e0e0;
 
 $color-background: #f6f7f9;
+
+$bp-xlarge: 1350px;
+$bp-large: 980px;
+$bp-medium: 600px;
+$bp-small: 420px;
+$bp-xsmall: 320px;
