--- a/src/components/FourthSlide/FourthSlide.module.scss
+++ b/src/components/FourthSlide/FourthSlide.module.scss
@@ -43,3 +43,12 @@
     }
   }
 }
+
+@media screen and (min-width: $bp-medium) and (max-width: $bp-large) {
+}
+
+@media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
+}
+
+@media screen and (min-width: $bp-xsmall) and (max-width: $bp-small) {
+}
