--- a/src/components/CardHeader/CardHeader.module.scss
+++ b/src/components/CardHeader/CardHeader.module.scss
@@ -32,8 +32,9 @@
 
 @media screen and (min-width: $bp-xsmall) and (max-width: $bp-small) {
   .cardHeader {
+    height: 50px;
     & h1 {
-      font-size: 1.9rem;
+      font-size: 1.8rem;
     }
   }
 }
