--- a/src/components/ThirdSlide/ThirdSlide.module.scss
+++ b/src/components/ThirdSlide/ThirdSlide.module.scss
@@ -11,7 +11,7 @@
 
   &_form {
     width: 400px;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
 
     &_container1 {
       min-height: 104px;
@@ -166,6 +166,10 @@
     &_form {
       width: 230px;
 
+      &_container1 {
+        min-height: 113px;
+      }
+
       &_emailLabel {
         font-size: 1.6rem;
       }
@@ -179,6 +183,8 @@
       }
 
       &_container2 {
+        margin: 25px 0 25px;
+        min-height: 60px;
         input {
           margin: 3px 8px 0px 0px;
         }
@@ -187,6 +193,10 @@
           font-size: 1.2rem;
         }
       }
+    }
+    .thirdSlide_form_submitBtn {
+      padding: 10px 18px;
+      font-size: 2rem;
     }
   }
 }
