* small - medium devices styles refactoring

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -17,6 +17,7 @@
 @media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
   .card {
     width: 400px;
+    height: 510px;
   }
 }
 
