--- a/src/components/CardHeader/CardHeader.module.scss
+++ b/src/components/CardHeader/CardHeader.module.scss
@@ -24,6 +24,7 @@
 
 @media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
   .cardHeader {
+    height: 60px;
     & h1 {
       font-size: 2.3rem;
     }
