--- a/src/components/MainSection/MainSection.module.scss
+++ b/src/components/MainSection/MainSection.module.scss
@@ -7,8 +7,16 @@
   padding: 80px 0 80px;
 }
 
+@media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
+  .section {
+    min-height: calc(100vh - 140px);
+    padding: 25px 0 25px;
+  }
+}
+
 @media screen and (min-width: $bp-xsmall) and (max-width: $bp-small) {
   .section {
+    min-height: calc(100vh - 120px);
     padding: 20px 0 20px;
   }
 }
