* medium - large devices styles refactoring

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,6 +11,7 @@
 @media screen and (min-width: $bp-medium) and (max-width: $bp-large) {
   .card {
     width: 550px;
+    height: 600px;
   }
 }
 
