--- a/src/components/CardHeader/CardHeader.module.scss
+++ b/src/components/CardHeader/CardHeader.module.scss
@@ -16,6 +16,7 @@
 
 @media screen and (min-width: $bp-medium) and (max-width: $bp-large) {
   .cardHeader {
+    height: 70px;
     & h1 {
       font-size: 3rem;
     }
