--- a/src/components/MainSection/MainSection.module.scss
+++ b/src/components/MainSection/MainSection.module.scss
@@ -7,6 +7,13 @@
   padding: 80px 0 80px;
 }
 
+@media screen and (min-width: $bp-medium) and (max-width: $bp-large) {
+  .section {
+    min-height: calc(100vh - 160px);
+    padding: 30px 0 30px;
+  }
+}
+
 @media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
   .section {
     min-height: calc(100vh - 140px);
