--- a/src/components/MainSection/MainSection.module.scss
+++ b/src/components/MainSection/MainSection.module.scss
@@ -7,6 +7,12 @@
   padding: 80px 0 80px;
 }
 
+@media screen and (min-width: $bp-large) and (max-width: $bp-xlarge) {
+  .section {
+    padding: 50px 0 50px;
+  }
+}
+
 @media screen and (min-width: $bp-medium) and (max-width: $bp-large) {
   .section {
     min-height: calc(100vh - 160px);
