--- a/src/components/MainSection/MainSection.module.scss
+++ b/src/components/MainSection/MainSection.module.scss
@@ -9,27 +9,27 @@
 
 @media screen and (min-width: $bp-large) and (max-width: $bp-xlarge) {
   .section {
-    padding: 50px 0 50px;
+    padding: 50px 40px 50px;
   }
 }
 
 @media screen and (min-width: $bp-medium) and (max-width: $bp-large) {
   .section {
     min-height: calc(100vh - 160px);
-    padding: 30px 0 30px;
+    padding: 30px 25px 30px;
   }
 }
 
 @media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
   .section {
     min-height: calc(100vh - 140px);
-    padding: 25px 0 25px;
+    padding: 25px 10px 25px;
   }
 }
 
 @media screen and (min-width: $bp-xsmall) and (max-width: $bp-small) {
   .section {
     min-height: calc(100vh - 120px);
-    padding: 20px 0 20px;
+    padding: 20px 10px 20px;
   }
 }
