--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,6 +8,7 @@ $color-submition: #2988ff;
 
 $color-white: #ffffff;
 $color-grey: #e0e0e0;
+$color-grey-dark: #a8a8a8;
 
 $color-background: #f6f7f9;
 
