--- a/src/components/GithubUserInfo/GithubUserInfo.module.scss
+++ b/src/components/GithubUserInfo/GithubUserInfo.module.scss
@@ -269,9 +269,9 @@
 
   .goBackToForm {
     p {
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       & button {
-        font-size: 1.15rem;
+        font-size: 1.2rem;
       }
     }
   }
@@ -282,7 +282,7 @@
 
   .displayWhenSmallerThanLarge {
     display: block;
-    margin-left: 30px;
     margin-top: 50px;
+    text-align: center;
   }
 }
