--- a/src/components/GithubUserInfo/GithubUserInfo.module.scss
+++ b/src/components/GithubUserInfo/GithubUserInfo.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 530px;
+  height: 650px;
   margin: auto;
   width: 900px;
 }
@@ -45,6 +45,11 @@
     & p {
       font-size: 1.5rem;
       margin-bottom: 12px;
+
+      & a {
+        text-decoration: none;
+        color: inherit;
+      }
     }
 
     &_rightColumn {
@@ -146,7 +151,7 @@
 
 @media screen and (min-width: $bp-small) and (max-width: $bp-medium) {
   .sectionWrapper {
-    height: 610px;
+    height: 590px;
     padding: 0px 10px;
     width: 400px;
   }
