* Code refactoring * Fixed a bug in input styling

--- a/src/components/SecondSlide/SecondSlide.module.scss
+++ b/src/components/SecondSlide/SecondSlide.module.scss
@@ -25,6 +25,7 @@
       margin: 8px 0;
       display: inline-block;
       border: 1px solid $color-blue-secondary;
+      border-radius: 0;
 
       &:focus {
         outline: none;
