Fixed a bug in submit btn styling

--- a/src/components/ThirdSlide/ThirdSlide.module.scss
+++ b/src/components/ThirdSlide/ThirdSlide.module.scss
@@ -96,6 +96,7 @@
       padding: 12px 20px;
       margin: 8px 0;
       cursor: pointer;
+      border-radius: 0;
 
       &:hover {
         transform: scale(1.01);
